[metadata]
name = kaitaiStructCompile.repo
author = KOLANICH
url = https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.repo
description = the package to deal with the formats repo
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = KaitaiStruct, compiler, binary format, automation
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = False
include_package_data = True
py_modules = kaitaiStructCompile.repo
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.test
install_requires = 
	GitPython @ git+https://github.com/gitpython-developers/GitPython.git
